--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     },
     "extends": ["airbnb-base"],
     "rules": {
+      "indent": "off",
       "no-shadow": "off",
       "no-unused-vars": "off",
       "no-param-reassign": "off",
