--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
     "build": "webpack"
   },
+  "jest": {
+    "rootDir": ".",
+    "testDirectoryName": "tests",
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "css-loader": "^6.7.1",
     "express": "^4.18.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.0.3",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
